--- a/angular.json
+++ b/angular.json
@@ -28,6 +28,8 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/bootstrap/scss/bootstrap.scss",
+              "src/styles/theme-variables.scss",
               "src/styles/styles.scss"
             ],
             "scripts": []
