--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~8.1.0",
     "@ng-bootstrap/ng-bootstrap": "^5.0.0",
     "bootstrap": "^4.3.1",
+    "lodash": "^4.17.14",
     "moment": "^2.24.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
